<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_10dp"
    tools:context=".Activities.Summary">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="name"
        android:layout_marginTop="@dimen/size_10dp"
        android:textSize="@dimen/tv_size_20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_answers_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="start"
        android:text="@string/here_are_the_answers_selected"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_size_20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/txt_questionone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/questionone"
        app:layout_constraintTop_toBottomOf="@+id/txt_answers_selected"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_size_20sp" />

    <TextView
        android:id="@+id/txt_answerone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="answerone"
        app:layout_constraintTop_toBottomOf="@+id/txt_questionone"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_size_20sp" />

    <TextView
        android:id="@+id/txt_questiontwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/tv_size_20sp"
        android:text="@string/question_to"
        app:layout_constraintTop_toBottomOf="@+id/txt_answerone"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_size_20sp" />

    <TextView
        android:id="@+id/txt_answertwo"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_questiontwo"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="answertwo"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_size_20sp" />

    <Button
        android:id="@+id/bt_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:gravity="center"
        android:layout_marginTop="@dimen/tv_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_answertwo" />
</androidx.constraintlayout.widget.ConstraintLayout>